# athanor-launcher

./: README.md  README.zh-CN.md  io.github.athanor-dev.athanor-launcher.yaml  io.github.athanor_dev.athanor-launcher.yaml  io.github.athanor_dev.athanor_launcher.yaml  meson.build
data/: athanor.gresource.xml  athanor.in  io.github.athanor_dev.athanor-launcher.desktop  io.github.athanor_dev.athanor-launcher.desktop.in  io.github.athanor_dev.athanor-launcher.metainfo.xml  io.github.athanor_dev.athanor-launcher.metainfo.xml.in  io.github.athanor_dev.athanor_launcher.desktop  io.github.athanor_dev.athanor_launcher.metainfo.xml
data/ui/: main.blp
data/ui/page/: add_game_page.blp  game_detail_page.blp  home_page.blp
data/ui/widget/: file_chooser_row.blp  game_row.blp
data/ui/window/: main_window.blp
po/: POTFILES  athanor.pot  meson.build  zh_CN.po
src/athanor/: config.py  config.py.in  main.py
src/athanor/core/: dbus_proxy.py  game_manager.py  i18n.py  launcher.py  sandbox.py
src/athanor/ui/: AthanorMainWindow.py
src/athanor/ui/page/: add_game_page.py  game_detail_page.py  home_page.py
src/athanor/ui/widget/: file_chooser_row.py  game_row.py
src/athanor/ui/window/: main_window.py
